# RAG_PDF_Q-A

./: .gitignore  README.md  check_db.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/auth/: auth_service.py  dependencies.py  jwt_service.py  password.py
app/core/: __init__.py  config.py
app/db/: database.py  session.py
app/schemas/: user.py
app/services/: __init__.py  document_service.py  embedding_service.py  llm_service.py  pdf_service.py  reranker_service.py  retrieval_service.py  upload_service.py
tests/: test_auth_flow.py
