[project]
name = "rag-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==5.0.0",
    "email-validator==2.3.0",
    "fastapi==0.139.0",
    "langchain-community==0.4.2",
    "langchain-google-genai==4.2.6",
    "langchain-huggingface==1.2.2",
    "langchain-text-splitters==1.1.2",
    "pgvector==0.4.2",
    "psycopg[binary]==3.3.4",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "pypdf==6.14.2",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "sentence-transformers==5.6.0",
    "uvicorn==0.50.1",
]
